[package]
name = "remote-tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
russh = { version = "0.43.0", features = ["openssl"] }
russh-keys = { version = "0.43.0", features = ["openssl"] }
tokio = { version = "1.38.0", features = ["full"] }
